--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,5 +3,8 @@
 <app-bonjour-avec-prenom></app-bonjour-avec-prenom>
 <app-bonjour-avec-prenom [prenom]="'Igor'"></app-bonjour-avec-prenom>
 <app-bonjour-avec-prenom [prenom]="'Martin'"></app-bonjour-avec-prenom>
+<div class="bloc">
+  <div class="alignement"><app-collegue [col]="collegue"></app-collegue></div>
+</div>
 
 <router-outlet></router-outlet>
