tp 3 recherche par nom

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,6 +5,7 @@
 <app-bonjour-avec-prenom [prenom]="'Martin'"></app-bonjour-avec-prenom>
 <div class="bloc">
   <div class="alignement"><app-collegue [col]="collegue"></app-collegue></div>
+  <div class="alignement"><app-recherche-collegue-par-nom></app-recherche-collegue-par-nom></div>
 </div>
 
 <router-outlet></router-outlet>
