--- a/src/app/collegue/collegue.component.html
+++ b/src/app/collegue/collegue.component.html
@@ -5,7 +5,7 @@
   <li>{{col.dateDeNaissance | date}}</li>
   <li *ngIf="state">{{col.email}}</li>
   <li *ngIf="!state" ><input type="mail" name="mail" [value]="col.email"></li>
-  <li *ngIf="state">{{col.b.gif}}</li>
+  <li *ngIf="state">{{col.b.png}}</li>
   <li *ngIf="!state" ><input type="text" name="url" [value]="col.photoUrl"></li>
 
 </ul>
